noinst_LIBRARIES = libcif.a
libcif_a_SOURCES = cif_conv.c cif_lines.c cifbinread.c cifclose.c \
	cifdata.c cifdup.c ciferrstr.c ciffiledir.c ciffree.c cifgetpos.c \
	cifgetrec.c cifmode.c cifmsg.c cifopen.c cifprint.c cifputrec.c \
	cifrecgroup.c cifrel.c cifsetpos.c cifspace.c cifunitdir.c

AM_CPPFLAGS = -DKEY
